--- a/qlearning.ipynb
+++ b/qlearning.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<contextlib.ExitStack at 0x7ee29c6dc670>"
+       "<contextlib.ExitStack at 0x735681fc45b0>"
       ]
      },
      "execution_count": 1,
@@ -27,7 +27,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q-Learning Agent"
+    "Q-Learning Agent (pytorch)\n",
+    "=========================="
    ]
   },
   {
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +61,7 @@
        "(8,)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +81,7 @@
        "Discrete(4)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,22 +124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'LanderNetwork' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[16], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mthink\u001b[39m(\u001b[38;5;28mself\u001b[39m, observation_old, action, reward, observation, terminated):\n\u001b[1;32m     11\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39mthink(observation_old, action, reward, observation, terminated)\n\u001b[0;32m---> 13\u001b[0m sna \u001b[38;5;241m=\u001b[39m \u001b[43mSimpleNetworkAgent\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     14\u001b[0m cont \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     15\u001b[0m runs \u001b[38;5;241m=\u001b[39m [[]]\n",
-      "Cell \u001b[0;32mIn[16], line 5\u001b[0m, in \u001b[0;36mSimpleNetworkAgent.__init__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m()\n\u001b[0;32m----> 5\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnetwork \u001b[38;5;241m=\u001b[39m \u001b[43mLanderNetwork\u001b[49m()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'LanderNetwork' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from utils import Agent\n",
     "class SimpleNetworkAgent(Agent):\n",
@@ -149,8 +137,8 @@
     "        obs = torch.from_numpy(observation)\n",
     "        action = self.network(obs)\n",
     "        return action.argmax().item()\n",
-    "    def think(self, observation_old, action, reward, observation, terminated):\n",
-    "        return super().think(observation_old, action, reward, observation, terminated)\n",
+    "    def record_observation(self, observation_old, action, reward, observation, terminated):\n",
+    "        return super().record_observation(observation_old, action, reward, observation, terminated)\n",
     "\n",
     "sna = SimpleNetworkAgent()\n",
     "cont = None\n",
@@ -159,39 +147,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/20 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 20/20 [00:31<00:00,  1.58s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from utils import run_upto_n_steps, plot_reward_and_episodes\n",
-    "from tqdm import trange\n",
+    "from utils import plot_one_run\n",
     "\n",
-    "for round in trange(20):\n",
-    "    cont, runs = run_upto_n_steps(env, sna, 150, cont, runs)\n",
-    "    if round % 2 == 0:\n",
-    "        plt.clf()\n",
-    "        plot_reward_and_episodes(runs)\n",
-    "        plt.pause(0.2)"
+    "plot_one_run(env, sna,)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,14 +179,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 80/80 [00:13<00:00,  5.72it/s]\n"
+      "100%|██████████| 80/80 [00:09<00:00,  8.01it/s]\n"
      ]
     }
    ],
@@ -237,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +266,7 @@
     "        with torch.no_grad():\n",
     "            action = self.network(obs)\n",
     "        return action.argmax().item()\n",
-    "    def think(self, observation, action, reward, observation_next, terminated):\n",
+    "    def record_observation(self, observation, action, reward, observation_next, terminated):\n",
     "        if not self.network.training:\n",
     "            return \n",
     "        self.thoughts += 1\n",
@@ -308,13 +275,10 @@
     "        if isinstance(observation_next, np.ndarray):\n",
     "            observation_next = torch.from_numpy(observation_next)\n",
     "        outputs = self.network(observation)\n",
-    "        # next_outputs = self.network(observation_next)\n",
     "        cr_pred = outputs[action]\n",
     "        cr_esti = reward + (self.gamma*self.network(observation_next).argmax() if not terminated else 0)\n",
     "\n",
     "        loss = (cr_esti - cr_pred)**2\n",
-    "        # if terminated:\n",
-    "        #     loss = loss + self.terminal_multiplier*sum(next_outputs**2)\n",
     "        self.loss = self.loss + loss\n",
     "        self.losses.append(loss.item())\n",
     "        self.events.append({\n",
@@ -333,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,14 +308,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "thoughts 80027: : 80027it [01:58, 677.22it/s]                          \n"
+      "thoughts 380525: : 200268it [07:22, 452.17it/s]                         \n"
      ]
     }
    ],
@@ -360,7 +324,7 @@
     "from tqdm import trange\n",
     "from itertools import count\n",
     "tna.network.train()\n",
-    "training_steps  = 80_000\n",
+    "training_steps  = 20_000\n",
     "progbar = trange(training_steps)\n",
     "\n",
     "initial_steps = tna.thoughts\n",
@@ -376,7 +340,7 @@
     "            # plot_agent(tna)\n",
     "            plt.clf()\n",
     "            plt.subplot(2,1,1)\n",
-    "            plt.scatter(*zip(*enumerate(tna.losses)), c=[i['terminal'] for i in tna.events], s=10, alpha=0.8)\n",
+    "            plt.scatter(*zip(*enumerate(tna.losses)), c=[i['terminal'] for i in tna.events], s=120, alpha=0.8)\n",
     "            plt.subplot(2, 1, 2)\n",
     "            plot_reward_and_episodes(runs)\n",
     "            plt.pause(0.2)\n",
@@ -395,23 +359,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2/2 [00:08<00:00,  4.39s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from utils import plot_one_run\n",
     "enviz = gym.make(\"LunarLander-v3\", render_mode='human')\n",
     "tna.network.eval()\n",
-    "for i in trange(2):\n",
-    "    run_upto_n_steps(enviz, tna, 1_000)\n",
-    "# input()\n",
+    "plot_one_run(enviz, tna,)\n",
     "enviz.close()\n"
    ]
   },
@@ -600,7 +555,7 @@
     "class RandLander(Agent):\n",
     "    def act(self, observation, periphral=None):\n",
     "        return np.random.choice([0,1,2,3])\n",
-    "    def think(self, observation_old, action, reward, observation, terminated):\n",
+    "    def record_observation(self, observation_old, action, reward, observation, terminated):\n",
     "        pass\n",
     "\n",
     "rand_agent = RandLander()\n",
