✨  Created Jax lander network

--- a/qlearning.ipynb
+++ b/qlearning.ipynb
@@ -27,6 +27,115 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Q-Learning Agent (Jax/Flax)\n",
+    "==========================="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Any\n",
+    "from flax import nnx\n",
+    "\n",
+    "class LanderNetwork(nnx.Module):\n",
+    "    def __init__(self, rngs: nnx.Rngs=None) -> None:\n",
+    "        if rngs is None: rngs = nnx.Rngs(0)\n",
+    "        self.layers = nnx.Sequential(\n",
+    "            nnx.Linear(8, 128, rngs=rngs),\n",
+    "            nnx.relu,\n",
+    "            nnx.Linear(128, 128, rngs=rngs),\n",
+    "            nnx.relu,\n",
+    "            nnx.Linear(128, 4, rngs=rngs)\n",
+    "        )\n",
+    "    def __call__(self, x):\n",
+    "        return self.layers(x)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array(1, dtype=int32)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "ln = LanderNetwork(nnx.Rngs(0))\n",
+    "ln(np.random.randn(8)).argmax(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import Agent\n",
+    "\n",
+    "class TrainableAgent(Agent):\n",
+    "    \n",
+    "    def __init__(self, network: nnx.Module) -> None:\n",
+    "        self.network = network\n",
+    "        self._training = False\n",
+    "    def training(self):\n",
+    "        self.network.train()\n",
+    "        self._training=True\n",
+    "    def eval(self):\n",
+    "        self.network.eval()\n",
+    "        self._training=False\n",
+    "    def act(self, observation, periphral=None):\n",
+    "        if self._training:\n",
+    "            return np.random.randint(4)\n",
+    "        return self.network(observation).argmax(-1).item()\n",
+    "    def record_observation(self, observation_old, action, reward, observation, terminated):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import plot_one_run\n",
+    "import gymnasium as gym\n",
+    "env = gym.make(\"LunarLander-v3\", render_mode='human')\n",
+    "plot_one_run(env, TrainableAgent(LanderNetwork()), )\n",
+    "env.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Q-Learning Agent (pytorch)\n",
     "=========================="
    ]
