✨  Create TrainableNetworkAgent on the jax network

--- a/qlearning.ipynb
+++ b/qlearning.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<contextlib.ExitStack at 0x735681fc45b0>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib tk\n",
     "# %matplotlib qt\n",
@@ -33,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,17 +48,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Array(1, dtype=int32)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "ln = LanderNetwork(nnx.Rngs(0))\n",
@@ -78,42 +57,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Any\n",
     "from utils import Agent\n",
+    "from collections import deque\n",
+    "import optax\n",
     "\n",
     "class TrainableAgent(Agent):\n",
     "    \n",
-    "    def __init__(self, network: nnx.Module) -> None:\n",
+    "    def __init__(self, network: nnx.Module, buffer_size=32, gamma=0.9, lr=0.001) -> None:\n",
     "        self.network = network\n",
     "        self._training = False\n",
-    "    def training(self):\n",
+    "        self.buffer = deque([], maxlen=buffer_size)\n",
+    "        self.training_steps = 0\n",
+    "        self.gamma = gamma\n",
+    "        self.losses = []\n",
+    "        \n",
+    "        self.optim = nnx.Optimizer(self.network, optax.adamw(lr,))\n",
+    "        self.gradient_on_samples = nnx.grad(self.evaluate_samples)\n",
+    "        \n",
+    "    def __call__(self, x) -> np.ndarray:\n",
+    "        return self.network(x)\n",
+    "    def train(self):\n",
     "        self.network.train()\n",
     "        self._training=True\n",
+    "        return self\n",
     "    def eval(self):\n",
     "        self.network.eval()\n",
     "        self._training=False\n",
+    "        return self\n",
     "    def act(self, observation, periphral=None):\n",
     "        if self._training:\n",
     "            return np.random.randint(4)\n",
     "        return self.network(observation).argmax(-1).item()\n",
-    "    def record_observation(self, observation_old, action, reward, observation, terminated):\n",
-    "        pass"
+    "    def record_observation(self, observation, action, reward, next_observation, terminated):\n",
+    "        if not self._training:\n",
+    "            return\n",
+    "        self.buffer.append((observation, action, reward, next_observation, terminated))\n",
+    "        self.training_steps+=1\n",
+    "        self.losses.append(self.evaluate_sample(self.network, *self.buffer[-1]))\n",
+    "\n",
+    "        if self.training_steps%self.buffer.maxlen==0:\n",
+    "            self.train_on_samples(self.network, self.buffer)\n",
+    "\n",
+    "\n",
+    "    def train_on_samples(self, network, samples):\n",
+    "        grads = self.gradient_on_samples(network, samples)\n",
+    "        self.optim.update(grads)\n",
+    "    \n",
+    "    def evaluate_samples(self, network, samples):\n",
+    "        return sum((self.evaluate_sample(network, *sample) for sample in samples))\n",
+    "\n",
+    "    def evaluate_sample(self, network, observation, action, reward, next_observation, terminated):\n",
+    "        cr_pred = network(observation)[action]\n",
+    "        cr_estimate = reward + self.gamma*network(next_observation).argmax(-1)\n",
+    "        return (cr_pred-cr_estimate)**2\n",
+    "\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from utils import plot_one_run\n",
     "import gymnasium as gym\n",
     "env = gym.make(\"LunarLander-v3\", render_mode='human')\n",
-    "plot_one_run(env, TrainableAgent(LanderNetwork()), )\n",
+    "tna = TrainableAgent(LanderNetwork()).eval()\n",
+    "plot_one_run(env, tna, )\n",
     "env.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.close()\n",
+    "env.close()"
    ]
   },
   {
@@ -121,9 +148,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "plt.close()"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -161,40 +207,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(8,)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "env.observation_space.sample().shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Discrete(4)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "env.action_space"
    ]
@@ -288,17 +312,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 80/80 [00:09<00:00,  8.01it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from utils import run_upto_n_steps, plot_reward_and_episodes\n",
     "from tqdm import trange\n",
@@ -417,17 +433,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "thoughts 380525: : 200268it [07:22, 452.17it/s]                         \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from utils import run_upto_n_steps, plot_reward_and_episodes\n",
     "from tqdm import trange\n",
@@ -481,20 +489,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 0.98, 'Simple DQN')"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# plt.close()\n",
     "plt.suptitle(\"Simple DQN\")"
@@ -543,27 +540,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "thoughts 80028: 100%|█████████▉| 79988/80000 [03:14<00:00, 214.38it/s]"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<bound method tqdm.close of <tqdm.std.tqdm object at 0x7ee1a8aed450>>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from utils import run_upto_n_steps, plot_reward_and_episodes\n",
     "from tqdm import trange\n",
@@ -607,17 +586,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5/5 [00:21<00:00,  4.39s/it]                         \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "enviz = gym.make(\"LunarLander-v3\", render_mode='human')\n",
     "tna.network.eval()\n",
@@ -754,12 +725,12 @@
     "import gymnasium as gym\n",
     "\n",
     "env = gym.make(\"LunarLander-v3\", render_mode=\"human\")\n",
-    "observation, info = env.reset()\n",
+    "next_observation, info = env.reset()\n",
     "\n",
     "episode_over = False\n",
     "while not episode_over:\n",
     "    action = env.action_space.sample()  # agent policy that uses the observation and info\n",
-    "    observation, reward, terminated, truncated, info = env.step(action)\n",
+    "    next_observation, reward, terminated, truncated, info = env.step(action)\n",
     "\n",
     "    episode_over = terminated or truncated\n",
     "\n",
