🚀  Run jit compiled training session
Run simple DQN training session

--- a/qlearning.ipynb
+++ b/qlearning.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<contextlib.ExitStack at 0x74dba29e0a90>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%matplotlib tk\n",
     "# %matplotlib qt\n",
@@ -32,7 +43,7 @@
     "class LanderNetwork(nnx.Module):\n",
     "    def __init__(self, rngs: nnx.Rngs=None) -> None:\n",
     "        if rngs is None: rngs = nnx.Rngs(0)\n",
-    "        self.layers = nnx.Sequential(\n",
+    "        self.sequential = nnx.Sequential(\n",
     "            nnx.Linear(8, 128, rngs=rngs),\n",
     "            nnx.relu,\n",
     "            nnx.Linear(128, 128, rngs=rngs),\n",
@@ -40,15 +51,26 @@
     "            nnx.Linear(128, 4, rngs=rngs)\n",
     "        )\n",
     "    def __call__(self, x):\n",
-    "        return self.layers(x)\n",
+    "        return self.sequential(x)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array(2, dtype=int32)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "ln = LanderNetwork(nnx.Rngs(0))\n",
@@ -57,27 +79,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Any\n",
     "from utils import Agent\n",
     "from collections import deque\n",
     "import optax\n",
     "\n",
     "class TrainableAgent(Agent):\n",
     "    \n",
-    "    def __init__(self, network: nnx.Module, buffer_size=32, gamma=0.9, lr=0.001) -> None:\n",
+    "    def __init__(self, network: nnx.Module, buffer_size=32, gamma=0.9, lr=0.001, epsilon=0.1) -> None:\n",
     "        self.network = network\n",
     "        self._training = False\n",
     "        self.buffer = deque([], maxlen=buffer_size)\n",
     "        self.training_steps = 0\n",
     "        self.gamma = gamma\n",
     "        self.losses = []\n",
+    "        self.epsilon=epsilon\n",
     "        \n",
     "        self.optim = nnx.Optimizer(self.network, optax.adamw(lr,))\n",
-    "        self.gradient_on_samples = nnx.grad(self.evaluate_samples)\n",
+    "        self.gradient_on_samples = nnx.jit(nnx.grad(TrainableAgent.evaluate_samples))\n",
     "        \n",
     "    def __call__(self, x) -> np.ndarray:\n",
     "        return self.network(x)\n",
@@ -90,86 +112,141 @@
     "        self._training=False\n",
     "        return self\n",
     "    def act(self, observation, periphral=None):\n",
-    "        if self._training:\n",
+    "        if self._training and np.random.rand() < self.epsilon:\n",
     "            return np.random.randint(4)\n",
     "        return self.network(observation).argmax(-1).item()\n",
     "    def record_observation(self, observation, action, reward, next_observation, terminated):\n",
     "        if not self._training:\n",
     "            return\n",
-    "        self.buffer.append((observation, action, reward, next_observation, terminated))\n",
+    "        self.buffer.append((observation, action, reward, next_observation, int(terminated)))\n",
     "        self.training_steps+=1\n",
-    "        self.losses.append(self.evaluate_sample(self.network, *self.buffer[-1]))\n",
+    "        self.losses.append(self.evaluate_sample(self.network, self.gamma, *self.buffer[-1]))\n",
     "\n",
     "        if self.training_steps%self.buffer.maxlen==0:\n",
-    "            self.train_on_samples(self.network, self.buffer)\n",
-    "\n",
+    "            self.train_on_samples(self.network, list(self.buffer))\n",
     "\n",
     "    def train_on_samples(self, network, samples):\n",
-    "        grads = self.gradient_on_samples(network, samples)\n",
+    "        grads = self.gradient_on_samples(network, self.gamma, samples)\n",
     "        self.optim.update(grads)\n",
     "    \n",
-    "    def evaluate_samples(self, network, samples):\n",
-    "        return sum((self.evaluate_sample(network, *sample) for sample in samples))\n",
+    "    @staticmethod\n",
+    "    def evaluate_samples(network, gamma, samples):\n",
+    "        return sum((TrainableAgent.evaluate_sample(network, gamma, *sample) for sample in samples))\n",
     "\n",
-    "    def evaluate_sample(self, network, observation, action, reward, next_observation, terminated):\n",
+    "    @staticmethod\n",
+    "    def evaluate_sample(network, gamma, observation, action, reward, next_observation, terminated):\n",
     "        cr_pred = network(observation)[action]\n",
-    "        cr_estimate = reward + self.gamma*network(next_observation).argmax(-1)\n",
+    "        cr_estimate = reward + (1-terminated)*gamma*network(next_observation).argmax(-1)\n",
     "        return (cr_pred-cr_estimate)**2\n",
     "\n",
     "        "
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Single demo run\n",
+    "---------------"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "from utils import plot_one_run\n",
     "import gymnasium as gym\n",
-    "env = gym.make(\"LunarLander-v3\", render_mode='human')\n",
+    "enviz = gym.make(\"LunarLander-v3\", render_mode='human')\n",
     "tna = TrainableAgent(LanderNetwork()).eval()\n",
-    "plot_one_run(env, tna, )\n",
-    "env.close()\n"
+    "plot_one_run(enviz, tna, )\n",
+    "enviz.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "plt.close()\n",
-    "env.close()"
+    "enviz.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training\n",
+    "--------"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Setup\n",
+    "env = gym.make(\"LunarLander-v3\")\n",
+    "tna = TrainableAgent(LanderNetwork(), lr=0.0005)\n",
+    "cont = None\n",
+    "runs = [[]]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5000/5000 [03:37<00:00, 22.95it/s] \n"
+     ]
+    }
+   ],
+   "source": [
+    "from utils import run_upto_n_steps, plot_reward_and_episodes, plot_one_run\n",
+    "from tqdm import trange\n",
+    "import matplotlib.pyplot as plt\n",
+    "def plot_losses_and_runs(losses, runs):\n",
+    "    plt.clf()\n",
+    "    plt.subplot(2, 1, 1)\n",
+    "    plt.scatter(*zip(*enumerate(losses)), )\n",
+    "    plt.yscale('log')\n",
+    "    plt.subplot(2, 1, 2)\n",
+    "    plot_reward_and_episodes(runs[:-1]) if len(runs) > 1 else None\n",
+    "    plt.pause(0.5)\n",
+    "tna.train()\n",
+    "\n",
+    "for step in trange(5_000):\n",
+    "    cont, runs = run_upto_n_steps(env, tna, 1, cont, runs)\n",
+    "    if tna.training_steps % 500 == 0:\n",
+    "        plt.clf()\n",
+    "        tna.eval()\n",
+    "        enviz = gym.make(\"LunarLander-v3\", render_mode='human')\n",
+    "        plot_one_run(enviz, tna, )\n",
+    "        enviz.close()\n",
+    "        tna.train()\n",
+    "    if tna.training_steps % 100 == 0:\n",
+    "        plot_losses_and_runs(tna.losses, runs)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "tna.eval()\n",
+    "enviz = gym.make(\"LunarLander-v3\", render_mode='human')\n",
+    "plot_one_run(enviz, tna, )\n",
+    "enviz.close()\n",
+    "tna.train()"
+   ]
   },
   {
    "cell_type": "code",
@@ -201,7 +278,7 @@
    "outputs": [],
    "source": [
     "import gymnasium as gym\n",
-    "env = gym.make(\"LunarLander-v3\", render_mode='human')\n",
+    "enviz = gym.make(\"LunarLander-v3\", render_mode='human')\n",
     "cont = None"
    ]
   },
@@ -211,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env.observation_space.sample().shape"
+    "enviz.observation_space.sample().shape"
    ]
   },
   {
@@ -220,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env.action_space"
+    "enviz.action_space"
    ]
   },
   {
@@ -286,7 +363,7 @@
    "source": [
     "from utils import plot_one_run\n",
     "\n",
-    "plot_one_run(env, sna,)"
+    "plot_one_run(enviz, sna,)"
    ]
   },
   {
@@ -295,7 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env.close()\n",
+    "enviz.close()\n",
     "# plt.close()"
    ]
   },
@@ -306,7 +383,7 @@
    "outputs": [],
    "source": [
     "import gymnasium as gym\n",
-    "env = gym.make(\"LunarLander-v3\")\n",
+    "enviz = gym.make(\"LunarLander-v3\")\n",
     "cont = None"
    ]
   },
@@ -320,7 +397,7 @@
     "from tqdm import trange\n",
     "\n",
     "for round in trange(80):\n",
-    "    cont, runs = run_upto_n_steps(env, sna, 150, cont, runs)\n",
+    "    cont, runs = run_upto_n_steps(enviz, sna, 150, cont, runs)\n",
     "    if round % 2 == 0:\n",
     "        plt.clf()\n",
     "        plot_reward_and_episodes(runs)\n",
@@ -360,7 +437,7 @@
    "outputs": [],
    "source": [
     "import gymnasium as gym\n",
-    "env = gym.make(\"LunarLander-v3\")\n",
+    "enviz = gym.make(\"LunarLander-v3\")\n",
     "cont = None"
    ]
   },
@@ -448,7 +525,7 @@
     "breakout = False\n",
     "for round in count():\n",
     "    try:\n",
-    "        cont, runs = run_upto_n_steps(env, tna, 150, cont, runs)\n",
+    "        cont, runs = run_upto_n_steps(enviz, tna, 150, cont, runs)\n",
     "        progbar.set_description(f\"thoughts {tna.thoughts}\")\n",
     "        progbar.update(tna.thoughts-initial_steps-progbar.n)\n",
     "        if progbar.n-initial_steps >= training_steps:\n",
@@ -556,9 +633,9 @@
     "breakout = False\n",
     "for round in count():\n",
     "    try:\n",
-    "        env = round%num_envs\n",
-    "        tna.epsilon = epsilons[env]\n",
-    "        cont[env], runs[env] = run_upto_n_steps(envs[env], tna, 40, cont[env], runs[env])\n",
+    "        enviz = round%num_envs\n",
+    "        tna.epsilon = epsilons[enviz]\n",
+    "        cont[enviz], runs[enviz] = run_upto_n_steps(envs[enviz], tna, 40, cont[enviz], runs[enviz])\n",
     "        progbar.set_description(f\"thoughts {tna.thoughts}\")\n",
     "        progbar.update(tna.thoughts-initial_steps-progbar.n)\n",
     "        if progbar.n-initial_steps >= training_steps:\n",
@@ -651,7 +728,7 @@
     "from utils import Agent, run_upto_n_steps\n",
     "import gymnasium as gym\n",
     "\n",
-    "env = gym.make(\"LunarLander-v3\", render_mode=\"human\")\n",
+    "enviz = gym.make(\"LunarLander-v3\", render_mode=\"human\")\n",
     "cont = None"
    ]
   },
@@ -674,7 +751,7 @@
     "from utils import run_and_plot\n",
     "\n",
     "for round in range(100):\n",
-    "    cont = run_and_plot(env, rand_agent, 50, cont)"
+    "    cont = run_and_plot(enviz, rand_agent, 50, cont)"
    ]
   },
   {
@@ -683,7 +760,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env.close()"
+    "enviz.close()"
    ]
   },
   {
@@ -693,7 +770,7 @@
    "outputs": [],
    "source": [
     "import gymnasium as gym\n",
-    "env = gym.make(\"LunarLander-v3\")\n",
+    "enviz = gym.make(\"LunarLander-v3\")\n",
     "cont = None"
    ]
   },
@@ -706,7 +783,7 @@
     "from utils import run_and_plot\n",
     "\n",
     "for round in range(100):\n",
-    "    cont = run_and_plot(env, rand_agent, 150, cont)"
+    "    cont = run_and_plot(enviz, rand_agent, 150, cont)"
    ]
   },
   {
@@ -724,17 +801,17 @@
    "source": [
     "import gymnasium as gym\n",
     "\n",
-    "env = gym.make(\"LunarLander-v3\", render_mode=\"human\")\n",
-    "next_observation, info = env.reset()\n",
+    "enviz = gym.make(\"LunarLander-v3\", render_mode=\"human\")\n",
+    "next_observation, info = enviz.reset()\n",
     "\n",
     "episode_over = False\n",
     "while not episode_over:\n",
-    "    action = env.action_space.sample()  # agent policy that uses the observation and info\n",
-    "    next_observation, reward, terminated, truncated, info = env.step(action)\n",
+    "    action = enviz.action_space.sample()  # agent policy that uses the observation and info\n",
+    "    next_observation, reward, terminated, truncated, info = enviz.step(action)\n",
     "\n",
     "    episode_over = terminated or truncated\n",
     "\n",
-    "env.close()"
+    "enviz.close()"
    ]
   },
   {
@@ -787,17 +864,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = gym.make(\"LunarLander-v3\", render_mode='human')\n",
+    "enviz = gym.make(\"LunarLander-v3\", render_mode='human')\n",
     "\n",
     "class RandomLunar(Agent):\n",
     "    def act(self, observation, periphral=None):\n",
-    "        return env.action_space.sample()\n",
+    "        return enviz.action_space.sample()\n",
     "    def think(self, observation_old, action, reward, observation):\n",
     "        return super().think(observation_old, action, reward, observation)\n",
     "randAgent = RandomLunar()\n",
     "\n",
     "\n",
-    "cont = run_n_steps(env, randAgent, 10)"
+    "cont = run_n_steps(enviz, randAgent, 10)"
    ]
   },
   {
@@ -806,7 +883,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cont = run_n_steps(env, randAgent, 10, cont)"
+    "cont = run_n_steps(enviz, randAgent, 10, cont)"
    ]
   },
   {
@@ -815,7 +892,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env.close()"
+    "enviz.close()"
    ]
   },
   {
