--- a/qlearning.ipynb
+++ b/qlearning.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<contextlib.ExitStack at 0x74dba29e0a90>"
+       "<contextlib.ExitStack at 0x7ef2171c2380>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,16 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array(2, dtype=int32)"
+       "Array(1, dtype=int32)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,13 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "from utils import Agent\n",
     "from collections import deque\n",
     "import optax\n",
+    "import jax.numpy as jnp\n",
     "\n",
     "class TrainableAgent(Agent):\n",
     "    \n",
@@ -100,6 +101,8 @@
     "        \n",
     "        self.optim = nnx.Optimizer(self.network, optax.adamw(lr,))\n",
     "        self.gradient_on_samples = nnx.jit(nnx.grad(TrainableAgent.evaluate_samples))\n",
+    "        # self.gradient_on_samples = nnx.jit(nnx.grad(TrainableAgent.batch_evaluate_samples))\n",
+    "        \n",
     "        \n",
     "    def __call__(self, x) -> np.ndarray:\n",
     "        return self.network(x)\n",
@@ -113,7 +116,11 @@
     "        return self\n",
     "    def act(self, observation, periphral=None):\n",
     "        if self._training and np.random.rand() < self.epsilon:\n",
-    "            return np.random.randint(4)\n",
+    "            return self.explore(observation)\n",
+    "        return self.exploit(observation)\n",
+    "    def explore(self, observation):\n",
+    "        return np.random.randint(4)\n",
+    "    def exploit(self, observation):\n",
     "        return self.network(observation).argmax(-1).item()\n",
     "    def record_observation(self, observation, action, reward, next_observation, terminated):\n",
     "        if not self._training:\n",
@@ -121,7 +128,7 @@
     "        self.buffer.append((observation, action, reward, next_observation, int(terminated)))\n",
     "        self.training_steps+=1\n",
     "        self.losses.append(self.evaluate_sample(self.network, self.gamma, *self.buffer[-1]))\n",
-    "\n",
+    "        \n",
     "        if self.training_steps%self.buffer.maxlen==0:\n",
     "            self.train_on_samples(self.network, list(self.buffer))\n",
     "\n",
@@ -132,6 +139,15 @@
     "    @staticmethod\n",
     "    def evaluate_samples(network, gamma, samples):\n",
     "        return sum((TrainableAgent.evaluate_sample(network, gamma, *sample) for sample in samples))\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def batch_evaluate_samples(network: nnx.Module, gamma:int, samples):\n",
+    "        observations, actions, rewards, next_observations, terminateds = zip(*samples)\n",
+    "        terminateds = jnp.array(terminateds)\n",
+    "        rewards = jnp.array(rewards)\n",
+    "        cr_preds = jnp.stack([pred[a] for pred, a in zip(network(observations), actions)])\n",
+    "        cr_estimates = rewards + (1-terminateds)*gamma*network(next_observations).argmax(-1)\n",
+    "        return sum((cr_preds-cr_estimates)**2)\n",
     "\n",
     "    @staticmethod\n",
     "    def evaluate_sample(network, gamma, observation, action, reward, next_observation, terminated):\n",
@@ -184,11 +200,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Setup\n",
+    "import gymnasium as gym\n",
     "env = gym.make(\"LunarLander-v3\")\n",
     "tna = TrainableAgent(LanderNetwork(), lr=0.0005)\n",
     "cont = None\n",
@@ -197,14 +214,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5000/5000 [03:37<00:00, 22.95it/s] \n"
+      "100%|██████████| 100/100 [01:22<00:00,  1.22it/s]\n"
      ]
     }
    ],
@@ -222,7 +239,7 @@
     "    plt.pause(0.5)\n",
     "tna.train()\n",
     "\n",
-    "for step in trange(5_000):\n",
+    "for step in trange(1_000):\n",
     "    cont, runs = run_upto_n_steps(env, tna, 1, cont, runs)\n",
     "    if tna.training_steps % 500 == 0:\n",
     "        plt.clf()\n",
@@ -237,9 +254,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  4,  8,  9, 13])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.stack([arr[i] for arr,i in zip(np.arange(15).reshape((5, 3)),[0,1,2,0,1])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.TrainableAgent at 0x7ef2501325f0>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tna.eval()\n",
     "enviz = gym.make(\"LunarLander-v3\", render_mode='human')\n",
@@ -250,10 +298,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plot_losses_and_runs(tna.losses, runs)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -273,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,25 +334,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8,)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "enviz.observation_space.sample().shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Discrete(4)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "enviz.action_space"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,18 +504,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gymnasium as gym\n",
-    "enviz = gym.make(\"LunarLander-v3\")\n",
+    "env = gym.make(\"LunarLander-v3\")\n",
     "cont = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,22 +582,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "thoughts 73:   1%|          | 73/10000 [01:42<3:51:52,  1.40s/it]\n",
+      "thoughts 10020: : 10020it [00:25, 386.64it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "from utils import run_upto_n_steps, plot_reward_and_episodes\n",
     "from tqdm import trange\n",
     "from itertools import count\n",
     "tna.network.train()\n",
-    "training_steps  = 20_000\n",
+    "training_steps  = 10_000\n",
     "progbar = trange(training_steps)\n",
     "\n",
     "initial_steps = tna.thoughts\n",
     "breakout = False\n",
     "for round in count():\n",
     "    try:\n",
-    "        cont, runs = run_upto_n_steps(enviz, tna, 150, cont, runs)\n",
+    "        cont, runs = run_upto_n_steps(env, tna, 150, cont, runs)\n",
     "        progbar.set_description(f\"thoughts {tna.thoughts}\")\n",
     "        progbar.update(tna.thoughts-initial_steps-progbar.n)\n",
     "        if progbar.n-initial_steps >= training_steps:\n",
@@ -535,6 +616,7 @@
     "            plt.clf()\n",
     "            plt.subplot(2,1,1)\n",
     "            plt.scatter(*zip(*enumerate(tna.losses)), c=[i['terminal'] for i in tna.events], s=120, alpha=0.8)\n",
+    "            plt.yscale('log')\n",
     "            plt.subplot(2, 1, 2)\n",
     "            plot_reward_and_episodes(runs)\n",
     "            plt.pause(0.2)\n",
