💄  Progress bar uses steps instead of rounds
Also switch to plotting cumsum of reward instead of just reward

--- a/qlearning.ipynb
+++ b/qlearning.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<contextlib.ExitStack at 0x7ef2171c2380>"
+       "<contextlib.ExitStack at 0x77b6311e7c40>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,16 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array(1, dtype=int32)"
+       "Array(2, dtype=int32)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,8 +100,8 @@
     "        self.epsilon=epsilon\n",
     "        \n",
     "        self.optim = nnx.Optimizer(self.network, optax.adamw(lr,))\n",
-    "        self.gradient_on_samples = nnx.jit(nnx.grad(TrainableAgent.evaluate_samples))\n",
-    "        # self.gradient_on_samples = nnx.jit(nnx.grad(TrainableAgent.batch_evaluate_samples))\n",
+    "        # self.gradient_on_samples = nnx.jit(nnx.grad(TrainableAgent.evaluate_samples))\n",
+    "        self.gradient_on_samples = nnx.jit(nnx.grad(TrainableAgent.batch_evaluate_samples))\n",
     "        \n",
     "        \n",
     "    def __call__(self, x) -> np.ndarray:\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,14 +214,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [01:22<00:00,  1.22it/s]\n"
+      "100%|██████████| 10000/10000 [01:29<00:00, 112.06it/s]\n"
      ]
     }
    ],
@@ -237,39 +237,35 @@
     "    plt.subplot(2, 1, 2)\n",
     "    plot_reward_and_episodes(runs[:-1]) if len(runs) > 1 else None\n",
     "    plt.pause(0.5)\n",
+    "\n",
+    "def demo_one_run(agent: Agent):\n",
+    "    plt.clf()\n",
+    "    agent.eval()\n",
+    "    enviz = gym.make(\"LunarLander-v3\", render_mode='human')\n",
+    "    plot_one_run(enviz, agent, )\n",
+    "    enviz.close()\n",
+    "    agent.train()\n",
     "tna.train()\n",
     "\n",
-    "for step in trange(1_000):\n",
-    "    cont, runs = run_upto_n_steps(env, tna, 1, cont, runs)\n",
-    "    if tna.training_steps % 500 == 0:\n",
-    "        plt.clf()\n",
-    "        tna.eval()\n",
-    "        enviz = gym.make(\"LunarLander-v3\", render_mode='human')\n",
-    "        plot_one_run(enviz, tna, )\n",
-    "        enviz.close()\n",
-    "        tna.train()\n",
-    "    if tna.training_steps % 100 == 0:\n",
-    "        plot_losses_and_runs(tna.losses, runs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0,  4,  8,  9, 13])"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.stack([arr[i] for arr,i in zip(np.arange(15).reshape((5, 3)),[0,1,2,0,1])])"
+    "step_limp = tna.training_steps + 10_000\n",
+    "prog_bar = trange(tna.training_steps, step_limp)\n",
+    "plots=0\n",
+    "demos=0\n",
+    "\n",
+    "# for step in trange(1_000):\n",
+    "while tna.training_steps < step_limp:\n",
+    "    init_steps = tna.training_steps\n",
+    "    cont, runs = run_upto_n_steps(env, tna, 1_000, cont, runs)\n",
+    "    prog_bar.update(np.min([tna.training_steps, step_limp]) - init_steps, )\n",
+    "\n",
+    "    if tna.training_steps // 5_000 > demos:\n",
+    "        demo_one_run(tna)\n",
+    "        demos = tna.training_steps//5_000\n",
+    "\n",
+    "    if tna.training_steps // 100 > plots:\n",
+    "        plot_losses_and_runs(tna.losses, runs)\n",
+    "        plots = tna.training_steps//100\n",
+    "prog_bar.close()"
    ]
   },
   {
@@ -280,7 +276,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.TrainableAgent at 0x7ef2501325f0>"
+       "(10045, 10045)"
       ]
      },
      "execution_count": 8,
@@ -289,16 +285,21 @@
     }
    ],
    "source": [
-    "tna.eval()\n",
-    "enviz = gym.make(\"LunarLander-v3\", render_mode='human')\n",
-    "plot_one_run(enviz, tna, )\n",
-    "enviz.close()\n",
-    "tna.train()"
+    "tna.training_steps, len(tna.losses)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "demo_one_run(tna)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,40 +335,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(8,)"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "enviz.observation_space.sample().shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Discrete(4)"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "enviz.action_space"
    ]
@@ -582,18 +561,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "thoughts 73:   1%|          | 73/10000 [01:42<3:51:52,  1.40s/it]\n",
-      "thoughts 10020: : 10020it [00:25, 386.64it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from utils import run_upto_n_steps, plot_reward_and_episodes\n",
     "from tqdm import trange\n",
