--- a/qlearning.ipynb
+++ b/qlearning.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<contextlib.ExitStack at 0x77b6311e7c40>"
+       "<contextlib.ExitStack at 0x7d213b3e0280>"
       ]
      },
      "execution_count": 1,
@@ -63,7 +63,7 @@
     {
      "data": {
       "text/plain": [
-       "Array(2, dtype=int32)"
+       "Array(0, dtype=int32)"
       ]
      },
      "execution_count": 3,
@@ -221,7 +221,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10000/10000 [01:29<00:00, 112.06it/s]\n"
+      "100%|██████████| 150000/150000 [22:36<00:00, 110.58it/s]\n"
      ]
     }
    ],
@@ -247,12 +247,11 @@
     "    agent.train()\n",
     "tna.train()\n",
     "\n",
-    "step_limp = tna.training_steps + 10_000\n",
+    "step_limp = tna.training_steps + 150_000\n",
     "prog_bar = trange(tna.training_steps, step_limp)\n",
     "plots=0\n",
     "demos=0\n",
     "\n",
-    "# for step in trange(1_000):\n",
     "while tna.training_steps < step_limp:\n",
     "    init_steps = tna.training_steps\n",
     "    cont, runs = run_upto_n_steps(env, tna, 1_000, cont, runs)\n",
@@ -262,24 +261,24 @@
     "        demo_one_run(tna)\n",
     "        demos = tna.training_steps//5_000\n",
     "\n",
-    "    if tna.training_steps // 100 > plots:\n",
+    "    if tna.training_steps // 500 > plots:\n",
     "        plot_losses_and_runs(tna.losses, runs)\n",
-    "        plots = tna.training_steps//100\n",
+    "        plots = tna.training_steps//500\n",
     "prog_bar.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10045, 10045)"
+       "(150370, 150370)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
